syntax = "proto3";
package com.vng.chat;

message HelloMessageRequest{
    string mess = 1;
}

message HelloMessageResponse{
    string mess = 1;
}

service DemoService{
    rpc connect(HelloMessageRequest) returns (HelloMessageResponse);
}
